--- a/signupdoctor.html
+++ b/signupdoctor.html
@@ -13,9 +13,9 @@
 
         <div class="navbar">
             
-            <a class="active" href="#home">Home</a>
+            <a  href="#home">Home</a>
             <a href="#patients">Patients</a>
-            <a href="#doctors">Doctors</a>
+            <a class="active" href="#doctors">Doctors</a>
             <a href="#ngos">NGOs</a>
             <a href="#aboutus">Aboutus</a>
             <a href="#contact">Contact</a>
