--- a/forms/signupdoctor.html
+++ b/forms/signupdoctor.html
@@ -13,9 +13,9 @@
 
         <div class="navbar">
             
-            <a  href="#home">Home</a>
+            <a  href="/homa_page.html">Home</a>
             <a href="#patients">Patients</a>
-            <a class="active" href="#doctors">Doctors</a>
+            <a class="active" href="/signupdoctor.html">Doctors</a>
             <a href="#ngos">NGOs</a>
             <a href="#aboutus">Aboutus</a>
             <a href="#contact">Contact</a>
@@ -75,4 +75,4 @@
     </form>
 
 </body>
-</html>
+</html>rgb(157, 235, 196)rgb(155, 243, 199)
