--- a/homa_page.html
+++ b/homa_page.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONINFO || WE'VE GOT YOUR BACK</title>
-    <link rel="stylesheet" href=css/home_page_style.css">
+    <link rel="stylesheet" href="css/home_page_style.css">
 </head>
 <body>
     
@@ -16,7 +16,7 @@
             
             <a class="active" href="#home">Home</a>
             <a href="#patients">Patients</a>
-            <a href="#doctors">Doctors</a>
+            <a href="/signupdoctor.html">Doctors</a>
             <a href="#ngos">NGOs</a>
             <a href="#aboutus">Aboutus</a>
             <a href="#contact">Contact</a>
