--- a/About-Us.html
+++ b/About-Us.html
@@ -33,7 +33,7 @@
 
       <div class="ngocontainer">
         <div class="ngotext">
-          If You are an NGO and want to help the needies,<br />
+          If You are an NGO and want to help the needy,<br />
           then this website is for you
         </div>
         <img class="ngo" src="/img/ngo.jpg" alt="" />
