--- a/homa_page.html
+++ b/homa_page.html
@@ -18,7 +18,8 @@
             <a href="#patients">Patients</a>
             <a href="/signupdoctor.html">Doctors</a>
             <a href="#ngos">NGOs</a>
-            <a href="#aboutus">Aboutus</a>
+            <a href="/About-Us.html">Aboutus</a>
+
             <a href="#contact">Contact</a>
         </div>
     </nav>
