--- a/About-Us.html
+++ b/About-Us.html
@@ -12,9 +12,9 @@
       <div class="navbar">
         <a class="active" href="#home">Home</a>
         <a href="#patients">Patients</a>
-        <a href="/signupdoctor.html">Doctors</a>
+        <a href="/forms/signupdoctor.html">Doctors</a>
         <a href="#ngos">NGOs</a>
-        <a href="#aboutus">Aboutus</a>
+        <a href="/About-Us.html">Aboutus</a>
         <a href="#contact">Contact</a>
       </div>
     </nav>
