--- a/forms/signupdoctor.html
+++ b/forms/signupdoctor.html
@@ -17,7 +17,8 @@
             <a href="#patients">Patients</a>
             <a class="active" href="/signupdoctor.html">Doctors</a>
             <a href="#ngos">NGOs</a>
-            <a href="#aboutus">Aboutus</a>
+            <a href="/About-Us.html">Aboutus</a>
+
             <a href="#contact">Contact</a>
         </div>
     </nav>
