--- a/homa_page.html
+++ b/homa_page.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COHELPER || WE'VE GOT YOUR BACK</title>
-    <link rel="stylesheet" href="home_page_style.css">
+    <link rel="stylesheet" href="css/home_page_style.css">
 </head>
 <body>
     
@@ -40,7 +40,7 @@ Cohelper is basically designed for helping the needy to
 provide them with sufficient resources when they are in 
 need and then connect them with doctors and NGOs for help.
         </p></pre>
-    <img src="./doctor-fighting-virus-comic-characters_24908-62669.jpg" alt="">
+    <img src="img/" alt="">
     
 </article>
 
